1.1.4 (2009-09-22)
	* Improved logging when an error occurs during component state change,
	  to allow investigating problems.
	* "Donut-ready" (compiled against 1.6).

1.1.3 (2009-07-30)
	* Fixed exception when trying to disable on some non-rooted devices.
	* Fixed rare exception during system configuration change.
	* Fixed apostrophe escaping in various texts, the help screen.

1.1.2 (2009-07-22)
	* Support missing CONNECTIVITY_ACTION intent.

1.1.1 (2009-07-14)
	* Slightly improved some event descriptions.
	* Remember state of "toggle system apps" filter across restarts.

1.1.0 (2009-07-12)
	* Allow root users to disable components (and enable them again).
	* Added support for the PHONE_STATE action, which we previously missed.

1.0.1 (2009-07-05)
    * Menu option to reload the list.
    * Menu option to expand or collapse all groups in one go.

1.0.0 (2009-06-26)
    Initial release.