@@ -1,5 +1,3 @@
-Support com.android.camera.NEW_PICTURE.
-
 It seems on some devices, disabling doesn't work. The error we see is:
   D/Autostarts(  378): Process returned with 254; stdout: ; stderr: su: exec failed for sh
   /data/data/com.elsdoerfer.android.autostarts/files/pm-call.sh Error:No such file or directory
