@@ -210,4 +210,6 @@
 	<string name="act_phone_state_changed_detail">The call state of the phone has changed, for example when a new call is coming in, a call is accepted, or a previously active call ends.</string>
 	<string name="act_connectivity">Connectivity changed</string>
 	<string name="act_connectivity_detail">The current network connection has changed, e.g. when switching from Wi-Fi to GSM. Note that since this is also triggered when a connection is initially established, it effectively entails the &quot;On Startup&quot; behavior.</string>
+	<string name="act_new_picture">New Picture</string>
+	<string name="act_new_picture_detail">A new photo was added to the gallery, usually by the Camera application after the user made a new photo.</string>
 </resources>
